# muninn-mcp-server

./: .gitignore  ARCHITECTURE.md  EXAMPLES.md  PROJECT_SUMMARY.md  QUICK_START.md  README.md  install.sh  justfile  pyproject.toml  test_muninn.py
src/muninn_mcp_server/: __init__.py  server.py
src/muninn_mcp_server/embeddings/: __init__.py  local_embedder.py
src/muninn_mcp_server/schemas/: __init__.py  models.py
src/muninn_mcp_server/storage/: __init__.py  sqlite_store.py  vector_store.py
tests/: __init__.py  test_sqlite_store.py  test_vector_store.py
